//
//  ImageConstants.swift
//  PokemonApp
//
//  Created by Olga Sabadina on 12.10.2023.
//

import UIKit

enum ImageConstants {
    static let backBarImage = UIImage(systemName: "arrow.backward")
    static let skillsStac = UIImage(named: "Vector")
}
